digiKam 7.7.0 - Release date: 2022-xx-xx

*****************************************************************************************************
NEW FEATURES:

General: remove internal libheif and libde265 from core in favor to system libraries.
Bundles: Add JpegXL support (read/write) in all bundles (AppImage, MacOS, and Windows).
         More info about this file format: https://en.wikipedia.org/wiki/JPEG_XL
Bundles: Add AVIF/AOM support (read/write) in all bundles (AppImage, MacOS, and Windows).
         More info about this file format: https://en.wikipedia.org/wiki/AVIF

*****************************************************************************************************
BUGFIXES:

001 ==> 450567 - When editing a group caption, the digiKam does not warn of possible information loss.
002 ==> 450587 - Inconsistent disabled state of Save action after Undo/Redo.
003 ==> 451256 - An empty album displays a notification message that the database query returned no result.
004 ==> 451265 - Incorrect information in dialog.
005 ==> 451221 - Cannot start digiKam.
006 ==> 451289 - Database identifiers should be protected with tick marks.
007 ==> 436533 - Add JPEG XL support in all bundles (AppImage, MacOS, Windows).
009 ==> 109060 - Add AVIF file format support to all bundles (AppImage, MacOS, Windows).
010 ==> 451374 - When changing image orientation to portrait in DNG file, the change does not seem to get written to file metadata.
011 ==> 451460 - Failed to update the database schema from version 10 to version 11.
012 ==> 449406 - Photograph Properties incorrect after saving in image editor.
013 ==> 