@@ -990,10 +990,7 @@ void ImportUI::moveEvent(QMoveEvent* e)
 
 void ImportUI::slotClose()
 {
-/* FIXME
-    if (dialogClosed())
-        reject();
-*/
+    close();
 }
 
 bool ImportUI::dialogClosed()
